fixed some bugs
fixed horizontal scroll fixed navbar positions and margins also fixed 2 issues from consol

--- a/styles/common.scss
+++ b/styles/common.scss
@@ -16,6 +16,11 @@ body {
 
 main {
     display: flex;
+    overflow-x: hidden;
+}
+
+header {
+    height: 60px;
 }
 
 .navbar {
@@ -186,9 +191,9 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 70px;
     height: 100vh;
     width: 4%;
+    position: fixed;
     min-width: 76.8px;
     z-index: 50;
 
@@ -228,12 +233,11 @@ main {
     height: 100vh;
     width: 249.6px;
     min-width: 248px;
-    padding-top: 70px;
     overflow-y: hidden;
     display: flex;
     flex-direction: column;
     padding-left: 20px;
-    // position: fixed;
+    position: fixed;
     z-index: 50;
 
 
