--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,19 +5,19 @@
 .category-content {
     width: 100%;
     height: 60px;
-    margin-top: 60px;
     overflow-x: hidden;
 
     &__categories {
-        width: fit-content;
-        min-width: 100%;
         height: 50px;
         margin-top: 4px;
         display: flex;
         justify-content: space-evenly;
         align-items: center;
         overflow-x: hidden;
-        
+
+        @media only screen and (max-width: 1600px) {
+            align-items: stretch;
+        }
 
         &__item {
             border-radius: 10px;
@@ -25,13 +25,13 @@
             display: flex;
             align-items: center;
             box-sizing: border-box;
-            padding: 10px 18px;
-            margin-left: 5px;
-            height: 30px;
+            padding: 10px;
+            margin-left: 10px;
+            min-height: 20px;
             width: max-content;
             background-color: $additiveBackgroundColor;
             cursor: pointer;
-            font-size: calculateRem(14, 16);
+            font-size: calculateRem(12, 16);
         }
 
         &__item:hover {
@@ -109,6 +109,14 @@
 
     }
     
+}
+
+.small-margin {
+    margin-left: 80px;
+}
+
+.big-margin {
+    margin-left: 250px;
 }
 
 
